--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,35 @@
+server:
+  port: 8000
+  servlet:
+    context-path: /blog
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+    
 spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
+      
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul
     username: cos
     password: cos1234
+    
+  jpa:
+    open-in-view: true
+    hibernate:
+      ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl # 변수명 그대로 테이블에 옮겨주겠다!
+      use-new-id-generator-mappings: false # false = JPA의 기본전략을 따라가지 않겠다
+    show-sql: true # 콘솔창에 쿼리문 보여주기
+    properties:
+      hibernate.format_sql: true # 콘솔창에 쿼리문 정렬해서 이쁘게보여주기~~
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
