--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,9 @@ spring:
     password: cos1234
     
   jpa:
-    open-in-view: true
+    open-in-view: true # true로 설정해두면 영속성을 프리젠테이션 계층까지 가져간다!
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl # 변수명 그대로 테이블에 옮겨주겠다!
       use-new-id-generator-mappings: false # false = JPA의 기본전략을 따라가지 않겠다
